# laba7

./: 7.cpp  CMakeLists.txt  input.txt  output.txt
inc/: 7.h  fileIO.cpp  fileIO.h  prime_sieve.cpp  prime_sieve.h
